--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,6 +45,7 @@ file.reference.jasperreports-6.17.0.jar=C:\\Users\\CARLOS ORELLANO\\Documents\\A
 file.reference.jcalendar-1.4.jar=C:\\Users\\CARLOS ORELLANO\\Documents\\A-UNI\\Software\\jcalendar-1.4.jar
 file.reference.jdt-compiler-3.1.1.jar=C:\\Users\\CARLOS ORELLANO\\Documents\\A-UNI\\V CICLO\\Progrmacion III\\Instalador_Practica I\\Rep\\lib\\jdt-compiler-3.1.1.jar
 file.reference.joda-time-2.4.jar=C:\\Users\\CARLOS ORELLANO\\Documents\\A-UNI\\V CICLO\\Progrmacion III\\Instalador_Practica I\\Rep\\lib\\joda-time-2.4.jar
+file.reference.jxl-2.6.12.jar=C:\\Users\\CARLOS ORELLANO\\Documents\\A-UNI\\V CICLO\\Progrmacion III\\Programas_Practica\\jxl-2.6.12.jar
 file.reference.mysql-connector-java-8.0.17.jar-1=C:\\Users\\CARLOS ORELLANO\\Documents\\A-UNI\\V CICLO\\Progrmacion III\\Instalador_Practica I\\Rep\\lib\\mysql-connector-java-8.0.17.jar
 file.reference.spring-beans-2.5.1.jar=C:\\Users\\CARLOS ORELLANO\\Documents\\A-UNI\\V CICLO\\Progrmacion III\\Instalador_Practica I\\Rep\\lib\\spring-beans-2.5.1.jar
 includes=**
@@ -61,7 +62,9 @@ javac.classpath=\
     ${file.reference.jdt-compiler-3.1.1.jar}:\
     ${file.reference.joda-time-2.4.jar}:\
     ${file.reference.mysql-connector-java-8.0.17.jar-1}:\
-    ${file.reference.spring-beans-2.5.1.jar}
+    ${file.reference.spring-beans-2.5.1.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jxl-2.6.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
