--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,10 +47,6 @@ file.reference.jdt-compiler-3.1.1.jar=C:\\Users\\CARLOS ORELLANO\\Documents\\A-U
 file.reference.joda-time-2.4.jar=C:\\Users\\CARLOS ORELLANO\\Documents\\A-UNI\\V CICLO\\Progrmacion III\\Instalador_Practica I\\Rep\\lib\\joda-time-2.4.jar
 file.reference.jxl-2.6.12.jar=C:\\Users\\CARLOS ORELLANO\\Documents\\A-UNI\\V CICLO\\Progrmacion III\\Programas_Practica\\jxl-2.6.12.jar
 file.reference.mysql-connector-java-8.0.17.jar-1=C:\\Users\\CARLOS ORELLANO\\Documents\\A-UNI\\V CICLO\\Progrmacion III\\Instalador_Practica I\\Rep\\lib\\mysql-connector-java-8.0.17.jar
-file.reference.RojeruSan.full_9.6.jar=C:\\Users\\CARLOS ORELLANO\\Documents\\A-UNI\\V CICLO\\Progrmacion III\\RojeruSan Librer\u00edas\\RojeruSan Librer\u00edas\\RojeruSan.full_9.6.jar
-file.reference.RSAnimation.jar=C:\\Users\\CARLOS ORELLANO\\Documents\\A-UNI\\V CICLO\\Progrmacion III\\RojeruSan Librer\u00edas\\RojeruSan Librer\u00edas\\RSAnimation.jar
-file.reference.RSMaterialComponents_3.0.jar=C:\\Users\\CARLOS ORELLANO\\Documents\\A-UNI\\V CICLO\\Progrmacion III\\RojeruSan Librer\u00edas\\RojeruSan Librer\u00edas\\RSMaterialComponents_3.0.jar
-file.reference.RSPanelGradiente.jar=C:\\Users\\CARLOS ORELLANO\\Documents\\A-UNI\\V CICLO\\Progrmacion III\\RojeruSan Librer\u00edas\\RojeruSan Librer\u00edas\\RSPanelGradiente.jar
 file.reference.spring-beans-2.5.1.jar=C:\\Users\\CARLOS ORELLANO\\Documents\\A-UNI\\V CICLO\\Progrmacion III\\Instalador_Practica I\\Rep\\lib\\spring-beans-2.5.1.jar
 includes=**
 jar.compress=false
@@ -68,11 +64,7 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-8.0.17.jar-1}:\
     ${file.reference.spring-beans-2.5.1.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jxl-2.6.12.jar}:\
-    ${file.reference.RSMaterialComponents_3.0.jar}:\
-    ${file.reference.RSPanelGradiente.jar}:\
-    ${file.reference.RojeruSan.full_9.6.jar}:\
-    ${file.reference.RSAnimation.jar}
+    ${file.reference.jxl-2.6.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
